# foodplanner

./: .gitignore  foodplanner.sln
.github/workflows/: integration_tests.yaml
Backend/: Program.cs
Backend.Test/: Backend.Test.csproj  CustomWebApplicationFactory.cs  GetRecipesTest.cs  docker-compose.yaml
Backend.Tests/: Backend.Tests.csproj  HelloWorldTest.cs  HelpersTest.cs  RecipesTest.cs  docker-compose.yaml
Backend/DTOs/: RecipeDTO.cs
Backend/Data/: RecipeDbContext.cs
Backend/Models/: Recipe.cs
Backend/Properties/: launchSettings.json
backend/: .gitignore  Cargo.toml  Helpers.cs  Program.cs  Recipe.cs  RecipeService.cs  backend.csproj  docker-compose.yml
backend-test/: TestDatabaseFixture.cs  UnitTest1.cs  backend-test.csproj  docker-compose.yaml
backend/Migrations/: 20230727201649_InitialCreate.Designer.cs  20230727201649_InitialCreate.cs  RecipeDbModelSnapshot.cs
backend/Properties/: launchSettings.json
backend/src/: csv_read.rs  main.rs
